@@ -1,5 +1,7 @@
 Changes with APR-ICONV 1.0.2
 
+  *) Fix libapriconv.rc for Win32 builds [William Rowe, Justin Erenkrantz]
+
 Changes with APR-ICONV 1.0.1
 
 Changes with APR-ICONV 1.0.0
